xsl/html: omit para/charshapes from element classes already affected by Style class

--- a/pyhwp-tests/hwp5_tests/fixtures/charshape.html.d/styles.css
+++ b/pyhwp-tests/hwp5_tests/fixtures/charshape.html.d/styles.css
@@ -15,146 +15,386 @@ body {
   margin-bottom: 0;
 }
 /* Styles */
-p.Normal {
-}
-p.Body {
-}
-p.Outline-1 {
-}
-p.Outline-2 {
-}
-p.Outline-3 {
-}
-p.Outline-4 {
-}
-p.Outline-5 {
-}
-p.Outline-6 {
-}
-p.Outline-7 {
-}
-p.Page-Number {
-}
-p.Header {
-}
-p.Footnote {
-}
-p.Endnote {
-}
-p.Memo {
-}
-/* Paragraph attributes */
-.parashape-0 {
+.Normal {
+/* @parashape-id = 2*/
   margin: 0pt 0pt 0pt 0pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-0 > span {
+.Normal > span {
   line-height: 1.6;
 }
-.parashape-1 {
+.Normal > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 4 7 9 12 14 16 */
+/* base + offset: 3 5 8 10 13 15 17 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "Lucida Sans Unicode", "바탕", "바탕";
+  font-size: 10pt;
+}
+.Body {
+/* @parashape-id = 3*/
+  margin: 0pt 0pt 0pt 15pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.Body > span {
+  line-height: 1.6;
+}
+.Body > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 4 7 9 12 14 16 */
+/* base + offset: 3 5 8 10 13 15 17 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "Lucida Sans Unicode", "바탕", "바탕";
+  font-size: 10pt;
+}
+.Outline-1 {
+/* @parashape-id = 4*/
+  margin: 0pt 0pt 0pt 10pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.Outline-1 > span {
+  line-height: 1.6;
+}
+.Outline-1 > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 4 7 9 12 14 16 */
+/* base + offset: 3 5 8 10 13 15 17 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "Lucida Sans Unicode", "바탕", "바탕";
+  font-size: 10pt;
+}
+.Outline-2 {
+/* @parashape-id = 5*/
+  margin: 0pt 0pt 0pt 20pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.Outline-2 > span {
+  line-height: 1.6;
+}
+.Outline-2 > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 4 7 9 12 14 16 */
+/* base + offset: 3 5 8 10 13 15 17 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "Lucida Sans Unicode", "바탕", "바탕";
+  font-size: 10pt;
+}
+.Outline-3 {
+/* @parashape-id = 6*/
+  margin: 0pt 0pt 0pt 30pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.Outline-3 > span {
+  line-height: 1.6;
+}
+.Outline-3 > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 4 7 9 12 14 16 */
+/* base + offset: 3 5 8 10 13 15 17 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "Lucida Sans Unicode", "바탕", "바탕";
+  font-size: 10pt;
+}
+.Outline-4 {
+/* @parashape-id = 7*/
+  margin: 0pt 0pt 0pt 40pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.Outline-4 > span {
+  line-height: 1.6;
+}
+.Outline-4 > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 4 7 9 12 14 16 */
+/* base + offset: 3 5 8 10 13 15 17 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "Lucida Sans Unicode", "바탕", "바탕";
+  font-size: 10pt;
+}
+.Outline-5 {
+/* @parashape-id = 8*/
+  margin: 0pt 0pt 0pt 50pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.Outline-5 > span {
+  line-height: 1.6;
+}
+.Outline-5 > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 4 7 9 12 14 16 */
+/* base + offset: 3 5 8 10 13 15 17 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "Lucida Sans Unicode", "바탕", "바탕";
+  font-size: 10pt;
+}
+.Outline-6 {
+/* @parashape-id = 9*/
+  margin: 0pt 0pt 0pt 60pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.Outline-6 > span {
+  line-height: 1.6;
+}
+.Outline-6 > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 4 7 9 12 14 16 */
+/* base + offset: 3 5 8 10 13 15 17 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "Lucida Sans Unicode", "바탕", "바탕";
+  font-size: 10pt;
+}
+.Outline-7 {
+/* @parashape-id = 10*/
+  margin: 0pt 0pt 0pt 70pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.Outline-7 > span {
+  line-height: 1.6;
+}
+.Outline-7 > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 4 7 9 12 14 16 */
+/* base + offset: 3 5 8 10 13 15 17 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "Lucida Sans Unicode", "바탕", "바탕";
+  font-size: 10pt;
+}
+.Page-Number {
+/* @parashape-id = 2*/
+  margin: 0pt 0pt 0pt 0pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.Page-Number > span {
+  line-height: 1.6;
+}
+.Page-Number > span {
+/* @charshape-id = 0*/
+  color: #000000;
+  font-family: /* base: 1 4 7 9 12 14 16 */
+/* base + offset: 1 4 7 9 12 14 16 */
+/* ko en cn jp other symbol user */
+"굴림", "굴림", "굴림", "굴림", "바탕", "굴림", "굴림";
+  font-size: 10pt;
+}
+.Header {
+/* @parashape-id = 11*/
+  margin: 0pt 0pt 0pt 0pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.5em;
+}
+.Header > span {
+  line-height: 1.5;
+}
+.Header > span {
+/* @charshape-id = 2*/
+  color: #000000;
+  font-family: /* base: 1 4 7 9 12 14 16 */
+/* base + offset: 1 4 7 9 12 14 16 */
+/* ko en cn jp other symbol user */
+"굴림", "굴림", "굴림", "굴림", "바탕", "굴림", "굴림";
+  font-size: 9pt;
+}
+.Footnote {
+/* @parashape-id = 1*/
   margin: 0pt 0pt 0pt 0pt;
   text-align: justify;
   text-indent: -13.1pt;
   padding-left: 13.1pt;
   min-height: 1.3em;
 }
-.parashape-1 > span {
+.Footnote > span {
   line-height: 1.3;
 }
-.parashape-2 {
+.Footnote > span {
+/* @charshape-id = 3*/
+  color: #000000;
+  font-family: /* base: 1 4 7 9 12 14 16 */
+/* base + offset: 3 5 8 10 13 15 17 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "Lucida Sans Unicode", "바탕", "바탕";
+  font-size: 9pt;
+}
+.Endnote {
+/* @parashape-id = 1*/
+  margin: 0pt 0pt 0pt 0pt;
+  text-align: justify;
+  text-indent: -13.1pt;
+  padding-left: 13.1pt;
+  min-height: 1.3em;
+}
+.Endnote > span {
+  line-height: 1.3;
+}
+.Endnote > span {
+/* @charshape-id = 3*/
+  color: #000000;
+  font-family: /* base: 1 4 7 9 12 14 16 */
+/* base + offset: 3 5 8 10 13 15 17 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "Lucida Sans Unicode", "바탕", "바탕";
+  font-size: 9pt;
+}
+.Memo {
+/* @parashape-id = 0*/
   margin: 0pt 0pt 0pt 0pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-2 > span {
+.Memo > span {
   line-height: 1.6;
 }
-.parashape-3 {
+.Memo > span {
+/* @charshape-id = 4*/
+  color: #000000;
+  font-family: /* base: 1 4 7 9 12 14 16 */
+/* base + offset: 1 4 7 9 12 14 16 */
+/* ko en cn jp other symbol user */
+"굴림", "굴림", "굴림", "굴림", "바탕", "굴림", "굴림";
+  font-size: 9pt;
+}
+/* Paragraph attributes */
+p.parashape-0 {
+  margin: 0pt 0pt 0pt 0pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+p.parashape-0 > span {
+  line-height: 1.6;
+}
+p.parashape-1 {
+  margin: 0pt 0pt 0pt 0pt;
+  text-align: justify;
+  text-indent: -13.1pt;
+  padding-left: 13.1pt;
+  min-height: 1.3em;
+}
+p.parashape-1 > span {
+  line-height: 1.3;
+}
+p.parashape-2 {
+  margin: 0pt 0pt 0pt 0pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+p.parashape-2 > span {
+  line-height: 1.6;
+}
+p.parashape-3 {
   margin: 0pt 0pt 0pt 15pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-3 > span {
+p.parashape-3 > span {
   line-height: 1.6;
 }
-.parashape-4 {
+p.parashape-4 {
   margin: 0pt 0pt 0pt 10pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-4 > span {
+p.parashape-4 > span {
   line-height: 1.6;
 }
-.parashape-5 {
+p.parashape-5 {
   margin: 0pt 0pt 0pt 20pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-5 > span {
+p.parashape-5 > span {
   line-height: 1.6;
 }
-.parashape-6 {
+p.parashape-6 {
   margin: 0pt 0pt 0pt 30pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-6 > span {
+p.parashape-6 > span {
   line-height: 1.6;
 }
-.parashape-7 {
+p.parashape-7 {
   margin: 0pt 0pt 0pt 40pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-7 > span {
+p.parashape-7 > span {
   line-height: 1.6;
 }
-.parashape-8 {
+p.parashape-8 {
   margin: 0pt 0pt 0pt 50pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-8 > span {
+p.parashape-8 > span {
   line-height: 1.6;
 }
-.parashape-9 {
+p.parashape-9 {
   margin: 0pt 0pt 0pt 60pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-9 > span {
+p.parashape-9 > span {
   line-height: 1.6;
 }
-.parashape-10 {
+p.parashape-10 {
   margin: 0pt 0pt 0pt 70pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-10 > span {
+p.parashape-10 > span {
   line-height: 1.6;
 }
-.parashape-11 {
+p.parashape-11 {
   margin: 0pt 0pt 0pt 0pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.5em;
 }
-.parashape-11 > span {
+p.parashape-11 > span {
   line-height: 1.5;
 }
 /* Text attributes */
-.charshape-0 {
+span.charshape-0 {
   color: #000000;
   font-family: /* base: 1 4 7 9 12 14 16 */
 /* base + offset: 1 4 7 9 12 14 16 */
@@ -162,7 +402,7 @@ p.Memo {
 "굴림", "굴림", "굴림", "굴림", "바탕", "굴림", "굴림";
   font-size: 10pt;
 }
-.charshape-1 {
+span.charshape-1 {
   color: #000000;
   font-family: /* base: 1 4 7 9 12 14 16 */
 /* base + offset: 3 5 8 10 13 15 17 */
@@ -170,7 +410,7 @@ p.Memo {
 "바탕", "바탕", "바탕", "바탕", "Lucida Sans Unicode", "바탕", "바탕";
   font-size: 10pt;
 }
-.charshape-2 {
+span.charshape-2 {
   color: #000000;
   font-family: /* base: 1 4 7 9 12 14 16 */
 /* base + offset: 1 4 7 9 12 14 16 */
@@ -178,7 +418,7 @@ p.Memo {
 "굴림", "굴림", "굴림", "굴림", "바탕", "굴림", "굴림";
   font-size: 9pt;
 }
-.charshape-3 {
+span.charshape-3 {
   color: #000000;
   font-family: /* base: 1 4 7 9 12 14 16 */
 /* base + offset: 3 5 8 10 13 15 17 */
@@ -186,7 +426,7 @@ p.Memo {
 "바탕", "바탕", "바탕", "바탕", "Lucida Sans Unicode", "바탕", "바탕";
   font-size: 9pt;
 }
-.charshape-4 {
+span.charshape-4 {
   color: #000000;
   font-family: /* base: 1 4 7 9 12 14 16 */
 /* base + offset: 1 4 7 9 12 14 16 */
@@ -194,7 +434,7 @@ p.Memo {
 "굴림", "굴림", "굴림", "굴림", "바탕", "굴림", "굴림";
   font-size: 9pt;
 }
-.charshape-5 {
+span.charshape-5 {
   color: #000000;
   font-family: /* base: 1 4 7 9 12 14 16 */
 /* base + offset: 3 5 8 10 13 15 17 */
@@ -203,7 +443,7 @@ p.Memo {
   font-size: 10pt;
   font-weight: bold;
 }
-.charshape-6 {
+span.charshape-6 {
   color: #000000;
   font-family: /* base: 1 4 7 9 12 14 16 */
 /* base + offset: 3 5 8 10 13 15 17 */
@@ -212,7 +452,7 @@ p.Memo {
   font-size: 10pt;
   font-style: italic;
 }
-.charshape-7 {
+span.charshape-7 {
   color: #000000;
   font-family: /* base: 1 4 7 9 12 14 16 */
 /* base + offset: 3 5 8 10 13 15 17 */
@@ -227,7 +467,7 @@ p.Memo {
   -moz-text-decoration-style: solid;
   -webkit-text-decoration-style: solid;
 }
-.charshape-8 {
+span.charshape-8 {
   color: #000000;
   font-family: /* base: 1 4 7 9 12 14 16 */
 /* base + offset: 3 5 8 10 13 15 17 */
@@ -242,7 +482,7 @@ p.Memo {
   -moz-text-decoration-style: solid;
   -webkit-text-decoration-style: solid;
 }
-.charshape-9 {
+span.charshape-9 {
   color: #000000;
   font-family: /* base: 1 4 7 9 12 14 16 */
 /* base + offset: 3 5 8 10 13 15 17 */
@@ -257,7 +497,7 @@ p.Memo {
   -moz-text-decoration-style: solid;
   -webkit-text-decoration-style: solid;
 }
-.charshape-10 {
+span.charshape-10 {
   color: #000000;
   font-family: /* base: 1 4 7 9 12 14 16 */
 /* base + offset: 3 6 8 10 13 15 17 */
@@ -265,7 +505,7 @@ p.Memo {
 "바탕", "Courier New", "바탕", "바탕", "Lucida Sans Unicode", "바탕", "바탕";
   font-size: 10pt;
 }
-.charshape-11 {
+span.charshape-11 {
   color: #000000;
   font-family: /* base: 1 4 7 9 12 14 16 */
 /* base + offset: 3 5 8 10 13 15 17 */
@@ -273,7 +513,7 @@ p.Memo {
 "바탕", "바탕", "바탕", "바탕", "Lucida Sans Unicode", "바탕", "바탕";
   font-size: 10pt;
 }
-.charshape-12 {
+span.charshape-12 {
   color: #000000;
   font-family: /* base: 1 4 7 9 12 14 16 */
 /* base + offset: 3 5 8 10 13 15 16 */
@@ -281,7 +521,7 @@ p.Memo {
 "바탕", "바탕", "바탕", "바탕", "Lucida Sans Unicode", "바탕", "굴림";
   font-size: 10pt;
 }
-.charshape-13 {
+span.charshape-13 {
   color: #000000;
   font-family: /* base: 1 4 7 9 12 14 16 */
 /* base + offset: 3 5 8 10 13 15 17 */
@@ -289,7 +529,7 @@ p.Memo {
 "바탕", "바탕", "바탕", "바탕", "Lucida Sans Unicode", "바탕", "바탕";
   font-size: 10pt;
 }
-.charshape-14 {
+span.charshape-14 {
   color: #000000;
   font-family: /* base: 1 4 7 9 12 14 16 */
 /* base + offset: 3 5 8 10 13 15 17 */
@@ -297,7 +537,7 @@ p.Memo {
 "바탕", "바탕", "바탕", "바탕", "Lucida Sans Unicode", "바탕", "바탕";
   font-size: 10pt;
 }
-.charshape-15 {
+span.charshape-15 {
   color: #000000;
   font-family: /* base: 1 4 7 9 12 14 16 */
 /* base + offset: 2 5 8 10 13 15 17 */
@@ -305,7 +545,7 @@ p.Memo {
 "돋움", "바탕", "바탕", "바탕", "Lucida Sans Unicode", "바탕", "바탕";
   font-size: 10pt;
 }
-.charshape-16 {
+span.charshape-16 {
   color: #000000;
   font-family: /* base: 1 4 7 9 12 14 16 */
 /* base + offset: 3 5 8 10 14 15 17 */
@@ -313,7 +553,7 @@ p.Memo {
 "바탕", "바탕", "바탕", "바탕", "굴림", "바탕", "바탕";
   font-size: 10pt;
 }
-.charshape-17 {
+span.charshape-17 {
   color: #000000;
   font-family: /* base: 1 4 7 9 12 14 16 */
 /* base + offset: 3 5 8 10 14 15 17 */
@@ -328,7 +568,7 @@ p.Memo {
   -moz-text-decoration-style: solid;
   -webkit-text-decoration-style: solid;
 }
-.charshape-18 {
+span.charshape-18 {
   color: #000000;
   font-family: /* base: 1 4 7 9 12 14 16 */
 /* base + offset: 3 5 8 10 14 15 17 */
