--- a/pyhwp-tests/hwp5_tests/fixtures/charstyle.html.d/styles.css
+++ b/pyhwp-tests/hwp5_tests/fixtures/charstyle.html.d/styles.css
@@ -15,154 +15,18 @@ body {
   margin-bottom: 0;
 }
 /* Styles */
-p.Normal {
-}
-p.Body {
-}
-p.Outline-1 {
-}
-p.Outline-2 {
-}
-p.Outline-3 {
-}
-p.Outline-4 {
-}
-p.Outline-5 {
-}
-p.Outline-6 {
-}
-p.Outline-7 {
-}
-p.Page-Number {
-}
-p.Header {
-}
-p.Footnote {
-}
-p.Memo {
-}
-p. {
-}
-/* Paragraph attributes */
-.parashape-0 {
+.Normal {
+/* @parashape-id = 0*/
   margin: 0pt 0pt 0pt 0pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-0 > span {
+.Normal > span {
   line-height: 1.6;
 }
-.parashape-1 {
-  margin: 0pt 0pt 0pt 20pt;
-  text-align: justify;
-  text-indent: 0pt;
-  min-height: 1.6em;
-}
-.parashape-1 > span {
-  line-height: 1.6;
-}
-.parashape-2 {
-  margin: 0pt 0pt 0pt 30pt;
-  text-align: justify;
-  text-indent: 0pt;
-  min-height: 1.6em;
-}
-.parashape-2 > span {
-  line-height: 1.6;
-}
-.parashape-3 {
-  margin: 0pt 0pt 0pt 40pt;
-  text-align: justify;
-  text-indent: 0pt;
-  min-height: 1.6em;
-}
-.parashape-3 > span {
-  line-height: 1.6;
-}
-.parashape-4 {
-  margin: 0pt 0pt 0pt 50pt;
-  text-align: justify;
-  text-indent: 0pt;
-  min-height: 1.6em;
-}
-.parashape-4 > span {
-  line-height: 1.6;
-}
-.parashape-5 {
-  margin: 0pt 0pt 0pt 60pt;
-  text-align: justify;
-  text-indent: 0pt;
-  min-height: 1.6em;
-}
-.parashape-5 > span {
-  line-height: 1.6;
-}
-.parashape-6 {
-  margin: 0pt 0pt 0pt 70pt;
-  text-align: justify;
-  text-indent: 0pt;
-  min-height: 1.6em;
-}
-.parashape-6 > span {
-  line-height: 1.6;
-}
-.parashape-7 {
-  margin: 0pt 0pt 0pt 15pt;
-  text-align: justify;
-  text-indent: 0pt;
-  min-height: 1.6em;
-}
-.parashape-7 > span {
-  line-height: 1.6;
-}
-.parashape-8 {
-  margin: 0pt 0pt 0pt 0pt;
-  text-align: justify;
-  text-indent: 0pt;
-  min-height: 1.5em;
-}
-.parashape-8 > span {
-  line-height: 1.5;
-}
-.parashape-9 {
-  margin: 0pt 0pt 0pt 10pt;
-  text-align: justify;
-  text-indent: 0pt;
-  min-height: 1.6em;
-}
-.parashape-9 > span {
-  line-height: 1.6;
-}
-.parashape-10 {
-  margin: 0pt 0pt 0pt 0pt;
-  text-align: justify;
-  text-indent: -13.1pt;
-  padding-left: 13.1pt;
-  min-height: 1.3em;
-}
-.parashape-10 > span {
-  line-height: 1.3;
-}
-.parashape-11 {
-  margin: 0pt 0pt 0pt 0pt;
-  text-align: justify;
-  text-indent: 0pt;
-  min-height: 1.6em;
-}
-.parashape-11 > span {
-  line-height: 1.6;
-}
-/* Text attributes */
-.charshape-0 {
-  color: #000000;
-  font-family: /* base: 1 3 5 7 9 11 13 */
-/* base + offset: 1 3 5 7 9 11 13 */
-/* ko en cn jp other symbol user */
-"굴림", "굴림", "굴림", "굴림", "굴림", "굴림", "굴림";
-  font-size: 10pt;
-}
-.charshape-1 {
+.Normal > span {
+/* @charshape-id = 1*/
   color: #000000;
   font-family: /* base: 1 3 5 7 9 11 13 */
 /* base + offset: 2 4 6 8 10 12 14 */
@@ -170,7 +34,189 @@ p. {
 "바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
   font-size: 10pt;
 }
-.charshape-2 {
+.Body {
+/* @parashape-id = 7*/
+  margin: 0pt 0pt 0pt 15pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.Body > span {
+  line-height: 1.6;
+}
+.Body > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 3 5 7 9 11 13 */
+/* base + offset: 2 4 6 8 10 12 14 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+  font-size: 10pt;
+}
+.Outline-1 {
+/* @parashape-id = 9*/
+  margin: 0pt 0pt 0pt 10pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.Outline-1 > span {
+  line-height: 1.6;
+}
+.Outline-1 > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 3 5 7 9 11 13 */
+/* base + offset: 2 4 6 8 10 12 14 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+  font-size: 10pt;
+}
+.Outline-2 {
+/* @parashape-id = 1*/
+  margin: 0pt 0pt 0pt 20pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.Outline-2 > span {
+  line-height: 1.6;
+}
+.Outline-2 > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 3 5 7 9 11 13 */
+/* base + offset: 2 4 6 8 10 12 14 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+  font-size: 10pt;
+}
+.Outline-3 {
+/* @parashape-id = 2*/
+  margin: 0pt 0pt 0pt 30pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.Outline-3 > span {
+  line-height: 1.6;
+}
+.Outline-3 > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 3 5 7 9 11 13 */
+/* base + offset: 2 4 6 8 10 12 14 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+  font-size: 10pt;
+}
+.Outline-4 {
+/* @parashape-id = 3*/
+  margin: 0pt 0pt 0pt 40pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.Outline-4 > span {
+  line-height: 1.6;
+}
+.Outline-4 > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 3 5 7 9 11 13 */
+/* base + offset: 2 4 6 8 10 12 14 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+  font-size: 10pt;
+}
+.Outline-5 {
+/* @parashape-id = 4*/
+  margin: 0pt 0pt 0pt 50pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.Outline-5 > span {
+  line-height: 1.6;
+}
+.Outline-5 > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 3 5 7 9 11 13 */
+/* base + offset: 2 4 6 8 10 12 14 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+  font-size: 10pt;
+}
+.Outline-6 {
+/* @parashape-id = 5*/
+  margin: 0pt 0pt 0pt 60pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.Outline-6 > span {
+  line-height: 1.6;
+}
+.Outline-6 > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 3 5 7 9 11 13 */
+/* base + offset: 2 4 6 8 10 12 14 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+  font-size: 10pt;
+}
+.Outline-7 {
+/* @parashape-id = 6*/
+  margin: 0pt 0pt 0pt 70pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.Outline-7 > span {
+  line-height: 1.6;
+}
+.Outline-7 > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 3 5 7 9 11 13 */
+/* base + offset: 2 4 6 8 10 12 14 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+  font-size: 10pt;
+}
+.Page-Number {
+/* @parashape-id = 0*/
+  margin: 0pt 0pt 0pt 0pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.Page-Number > span {
+  line-height: 1.6;
+}
+.Page-Number > span {
+/* @charshape-id = 0*/
+  color: #000000;
+  font-family: /* base: 1 3 5 7 9 11 13 */
+/* base + offset: 1 3 5 7 9 11 13 */
+/* ko en cn jp other symbol user */
+"굴림", "굴림", "굴림", "굴림", "굴림", "굴림", "굴림";
+  font-size: 10pt;
+}
+.Header {
+/* @parashape-id = 8*/
+  margin: 0pt 0pt 0pt 0pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.5em;
+}
+.Header > span {
+  line-height: 1.5;
+}
+.Header > span {
+/* @charshape-id = 2*/
   color: #000000;
   font-family: /* base: 1 3 5 7 9 11 13 */
 /* base + offset: 1 3 5 7 9 11 13 */
@@ -178,7 +224,38 @@ p. {
 "굴림", "굴림", "굴림", "굴림", "굴림", "굴림", "굴림";
   font-size: 9pt;
 }
-.charshape-3 {
+.Footnote {
+/* @parashape-id = 10*/
+  margin: 0pt 0pt 0pt 0pt;
+  text-align: justify;
+  text-indent: -13.1pt;
+  padding-left: 13.1pt;
+  min-height: 1.3em;
+}
+.Footnote > span {
+  line-height: 1.3;
+}
+.Footnote > span {
+/* @charshape-id = 4*/
+  color: #000000;
+  font-family: /* base: 1 3 5 7 9 11 13 */
+/* base + offset: 2 4 6 8 10 12 14 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+  font-size: 9pt;
+}
+.Memo {
+/* @parashape-id = 11*/
+  margin: 0pt 0pt 0pt 0pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.Memo > span {
+  line-height: 1.6;
+}
+.Memo > span {
+/* @charshape-id = 3*/
   color: #000000;
   font-family: /* base: 1 3 5 7 9 11 13 */
 /* base + offset: 1 3 5 7 9 11 13 */
@@ -186,7 +263,159 @@ p. {
 "굴림", "굴림", "굴림", "굴림", "굴림", "굴림", "굴림";
   font-size: 9pt;
 }
-.charshape-4 {
+. > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 3 5 7 9 11 13 */
+/* base + offset: 2 4 6 8 10 12 14 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+  font-size: 10pt;
+}
+/* Paragraph attributes */
+p.parashape-0 {
+  margin: 0pt 0pt 0pt 0pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+p.parashape-0 > span {
+  line-height: 1.6;
+}
+p.parashape-1 {
+  margin: 0pt 0pt 0pt 20pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+p.parashape-1 > span {
+  line-height: 1.6;
+}
+p.parashape-2 {
+  margin: 0pt 0pt 0pt 30pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+p.parashape-2 > span {
+  line-height: 1.6;
+}
+p.parashape-3 {
+  margin: 0pt 0pt 0pt 40pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+p.parashape-3 > span {
+  line-height: 1.6;
+}
+p.parashape-4 {
+  margin: 0pt 0pt 0pt 50pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+p.parashape-4 > span {
+  line-height: 1.6;
+}
+p.parashape-5 {
+  margin: 0pt 0pt 0pt 60pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+p.parashape-5 > span {
+  line-height: 1.6;
+}
+p.parashape-6 {
+  margin: 0pt 0pt 0pt 70pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+p.parashape-6 > span {
+  line-height: 1.6;
+}
+p.parashape-7 {
+  margin: 0pt 0pt 0pt 15pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+p.parashape-7 > span {
+  line-height: 1.6;
+}
+p.parashape-8 {
+  margin: 0pt 0pt 0pt 0pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.5em;
+}
+p.parashape-8 > span {
+  line-height: 1.5;
+}
+p.parashape-9 {
+  margin: 0pt 0pt 0pt 10pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+p.parashape-9 > span {
+  line-height: 1.6;
+}
+p.parashape-10 {
+  margin: 0pt 0pt 0pt 0pt;
+  text-align: justify;
+  text-indent: -13.1pt;
+  padding-left: 13.1pt;
+  min-height: 1.3em;
+}
+p.parashape-10 > span {
+  line-height: 1.3;
+}
+p.parashape-11 {
+  margin: 0pt 0pt 0pt 0pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+p.parashape-11 > span {
+  line-height: 1.6;
+}
+/* Text attributes */
+span.charshape-0 {
+  color: #000000;
+  font-family: /* base: 1 3 5 7 9 11 13 */
+/* base + offset: 1 3 5 7 9 11 13 */
+/* ko en cn jp other symbol user */
+"굴림", "굴림", "굴림", "굴림", "굴림", "굴림", "굴림";
+  font-size: 10pt;
+}
+span.charshape-1 {
+  color: #000000;
+  font-family: /* base: 1 3 5 7 9 11 13 */
+/* base + offset: 2 4 6 8 10 12 14 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+  font-size: 10pt;
+}
+span.charshape-2 {
+  color: #000000;
+  font-family: /* base: 1 3 5 7 9 11 13 */
+/* base + offset: 1 3 5 7 9 11 13 */
+/* ko en cn jp other symbol user */
+"굴림", "굴림", "굴림", "굴림", "굴림", "굴림", "굴림";
+  font-size: 9pt;
+}
+span.charshape-3 {
+  color: #000000;
+  font-family: /* base: 1 3 5 7 9 11 13 */
+/* base + offset: 1 3 5 7 9 11 13 */
+/* ko en cn jp other symbol user */
+"굴림", "굴림", "굴림", "굴림", "굴림", "굴림", "굴림";
+  font-size: 9pt;
+}
+span.charshape-4 {
   color: #000000;
   font-family: /* base: 1 3 5 7 9 11 13 */
 /* base + offset: 2 4 6 8 10 12 14 */
