--- a/pyhwp-tests/hwp5_tests/fixtures/facename.html.d/styles.css
+++ b/pyhwp-tests/hwp5_tests/fixtures/facename.html.d/styles.css
@@ -15,144 +15,366 @@ body {
   margin-bottom: 0;
 }
 /* Styles */
-p.Normal {
-}
-p.Body {
-}
-p.Outline-1 {
-}
-p.Outline-2 {
-}
-p.Outline-3 {
-}
-p.Outline-4 {
-}
-p.Outline-5 {
-}
-p.Outline-6 {
-}
-p.Outline-7 {
-}
-p.Page-Number {
-}
-p.Header {
-}
-p.Footnote {
-}
-p.Memo {
-}
-/* Paragraph attributes */
-.parashape-0 {
+.Normal {
+/* @parashape-id = 0*/
   margin: 0pt 0pt 0pt 0pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-0 > span {
+.Normal > span {
   line-height: 1.6;
 }
-.parashape-1 {
-  margin: 0pt 0pt 0pt 20pt;
-  text-align: justify;
-  text-indent: 0pt;
-  min-height: 1.6em;
+.Normal > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 6 12 16 18 20 22 */
+/* base + offset: 2 7 13 17 19 21 23 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "MS Mincho", "바탕", "바탕";
+  font-size: 10pt;
 }
-.parashape-1 > span {
-  line-height: 1.6;
-}
-.parashape-2 {
-  margin: 0pt 0pt 0pt 30pt;
-  text-align: justify;
-  text-indent: 0pt;
-  min-height: 1.6em;
-}
-.parashape-2 > span {
-  line-height: 1.6;
-}
-.parashape-3 {
-  margin: 0pt 0pt 0pt 40pt;
-  text-align: justify;
-  text-indent: 0pt;
-  min-height: 1.6em;
-}
-.parashape-3 > span {
-  line-height: 1.6;
-}
-.parashape-4 {
-  margin: 0pt 0pt 0pt 50pt;
-  text-align: justify;
-  text-indent: 0pt;
-  min-height: 1.6em;
-}
-.parashape-4 > span {
-  line-height: 1.6;
-}
-.parashape-5 {
-  margin: 0pt 0pt 0pt 60pt;
-  text-align: justify;
-  text-indent: 0pt;
-  min-height: 1.6em;
-}
-.parashape-5 > span {
-  line-height: 1.6;
-}
-.parashape-6 {
-  margin: 0pt 0pt 0pt 70pt;
-  text-align: justify;
-  text-indent: 0pt;
-  min-height: 1.6em;
-}
-.parashape-6 > span {
-  line-height: 1.6;
-}
-.parashape-7 {
+.Body {
+/* @parashape-id = 7*/
   margin: 0pt 0pt 0pt 15pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-7 > span {
+.Body > span {
   line-height: 1.6;
 }
-.parashape-8 {
-  margin: 0pt 0pt 0pt 0pt;
-  text-align: justify;
-  text-indent: 0pt;
-  min-height: 1.5em;
+.Body > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 6 12 16 18 20 22 */
+/* base + offset: 2 7 13 17 19 21 23 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "MS Mincho", "바탕", "바탕";
+  font-size: 10pt;
 }
-.parashape-8 > span {
-  line-height: 1.5;
-}
-.parashape-9 {
+.Outline-1 {
+/* @parashape-id = 9*/
   margin: 0pt 0pt 0pt 10pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-9 > span {
+.Outline-1 > span {
   line-height: 1.6;
 }
-.parashape-10 {
+.Outline-1 > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 6 12 16 18 20 22 */
+/* base + offset: 2 7 13 17 19 21 23 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "MS Mincho", "바탕", "바탕";
+  font-size: 10pt;
+}
+.Outline-2 {
+/* @parashape-id = 1*/
+  margin: 0pt 0pt 0pt 20pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.Outline-2 > span {
+  line-height: 1.6;
+}
+.Outline-2 > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 6 12 16 18 20 22 */
+/* base + offset: 2 7 13 17 19 21 23 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "MS Mincho", "바탕", "바탕";
+  font-size: 10pt;
+}
+.Outline-3 {
+/* @parashape-id = 2*/
+  margin: 0pt 0pt 0pt 30pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.Outline-3 > span {
+  line-height: 1.6;
+}
+.Outline-3 > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 6 12 16 18 20 22 */
+/* base + offset: 2 7 13 17 19 21 23 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "MS Mincho", "바탕", "바탕";
+  font-size: 10pt;
+}
+.Outline-4 {
+/* @parashape-id = 3*/
+  margin: 0pt 0pt 0pt 40pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.Outline-4 > span {
+  line-height: 1.6;
+}
+.Outline-4 > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 6 12 16 18 20 22 */
+/* base + offset: 2 7 13 17 19 21 23 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "MS Mincho", "바탕", "바탕";
+  font-size: 10pt;
+}
+.Outline-5 {
+/* @parashape-id = 4*/
+  margin: 0pt 0pt 0pt 50pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.Outline-5 > span {
+  line-height: 1.6;
+}
+.Outline-5 > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 6 12 16 18 20 22 */
+/* base + offset: 2 7 13 17 19 21 23 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "MS Mincho", "바탕", "바탕";
+  font-size: 10pt;
+}
+.Outline-6 {
+/* @parashape-id = 5*/
+  margin: 0pt 0pt 0pt 60pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.Outline-6 > span {
+  line-height: 1.6;
+}
+.Outline-6 > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 6 12 16 18 20 22 */
+/* base + offset: 2 7 13 17 19 21 23 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "MS Mincho", "바탕", "바탕";
+  font-size: 10pt;
+}
+.Outline-7 {
+/* @parashape-id = 6*/
+  margin: 0pt 0pt 0pt 70pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.Outline-7 > span {
+  line-height: 1.6;
+}
+.Outline-7 > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 6 12 16 18 20 22 */
+/* base + offset: 2 7 13 17 19 21 23 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "MS Mincho", "바탕", "바탕";
+  font-size: 10pt;
+}
+.Page-Number {
+/* @parashape-id = 0*/
+  margin: 0pt 0pt 0pt 0pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.Page-Number > span {
+  line-height: 1.6;
+}
+.Page-Number > span {
+/* @charshape-id = 0*/
+  color: #000000;
+  font-family: /* base: 1 6 12 16 18 20 22 */
+/* base + offset: 1 6 12 16 18 20 22 */
+/* ko en cn jp other symbol user */
+"굴림", "굴림", "굴림", "굴림", "MS Gothic", "굴림", "굴림";
+  font-size: 10pt;
+}
+.Header {
+/* @parashape-id = 8*/
+  margin: 0pt 0pt 0pt 0pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.5em;
+}
+.Header > span {
+  line-height: 1.5;
+}
+.Header > span {
+/* @charshape-id = 2*/
+  color: #000000;
+  font-family: /* base: 1 6 12 16 18 20 22 */
+/* base + offset: 1 6 12 16 18 20 22 */
+/* ko en cn jp other symbol user */
+"굴림", "굴림", "굴림", "굴림", "MS Gothic", "굴림", "굴림";
+  font-size: 9pt;
+}
+.Footnote {
+/* @parashape-id = 10*/
   margin: 0pt 0pt 0pt 0pt;
   text-align: justify;
   text-indent: -13.1pt;
   padding-left: 13.1pt;
   min-height: 1.3em;
 }
-.parashape-10 > span {
+.Footnote > span {
   line-height: 1.3;
 }
-.parashape-11 {
+.Footnote > span {
+/* @charshape-id = 4*/
+  color: #000000;
+  font-family: /* base: 1 6 12 16 18 20 22 */
+/* base + offset: 2 7 13 17 19 21 23 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "MS Mincho", "바탕", "바탕";
+  font-size: 9pt;
+}
+.Memo {
+/* @parashape-id = 11*/
   margin: 0pt 0pt 0pt 0pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-11 > span {
+.Memo > span {
+  line-height: 1.6;
+}
+.Memo > span {
+/* @charshape-id = 3*/
+  color: #000000;
+  font-family: /* base: 1 6 12 16 18 20 22 */
+/* base + offset: 1 6 12 16 18 20 22 */
+/* ko en cn jp other symbol user */
+"굴림", "굴림", "굴림", "굴림", "MS Gothic", "굴림", "굴림";
+  font-size: 9pt;
+}
+/* Paragraph attributes */
+p.parashape-0 {
+  margin: 0pt 0pt 0pt 0pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+p.parashape-0 > span {
+  line-height: 1.6;
+}
+p.parashape-1 {
+  margin: 0pt 0pt 0pt 20pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+p.parashape-1 > span {
+  line-height: 1.6;
+}
+p.parashape-2 {
+  margin: 0pt 0pt 0pt 30pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+p.parashape-2 > span {
+  line-height: 1.6;
+}
+p.parashape-3 {
+  margin: 0pt 0pt 0pt 40pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+p.parashape-3 > span {
+  line-height: 1.6;
+}
+p.parashape-4 {
+  margin: 0pt 0pt 0pt 50pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+p.parashape-4 > span {
+  line-height: 1.6;
+}
+p.parashape-5 {
+  margin: 0pt 0pt 0pt 60pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+p.parashape-5 > span {
+  line-height: 1.6;
+}
+p.parashape-6 {
+  margin: 0pt 0pt 0pt 70pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+p.parashape-6 > span {
+  line-height: 1.6;
+}
+p.parashape-7 {
+  margin: 0pt 0pt 0pt 15pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+p.parashape-7 > span {
+  line-height: 1.6;
+}
+p.parashape-8 {
+  margin: 0pt 0pt 0pt 0pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.5em;
+}
+p.parashape-8 > span {
+  line-height: 1.5;
+}
+p.parashape-9 {
+  margin: 0pt 0pt 0pt 10pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+p.parashape-9 > span {
+  line-height: 1.6;
+}
+p.parashape-10 {
+  margin: 0pt 0pt 0pt 0pt;
+  text-align: justify;
+  text-indent: -13.1pt;
+  padding-left: 13.1pt;
+  min-height: 1.3em;
+}
+p.parashape-10 > span {
+  line-height: 1.3;
+}
+p.parashape-11 {
+  margin: 0pt 0pt 0pt 0pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+p.parashape-11 > span {
   line-height: 1.6;
 }
 /* Text attributes */
-.charshape-0 {
+span.charshape-0 {
   color: #000000;
   font-family: /* base: 1 6 12 16 18 20 22 */
 /* base + offset: 1 6 12 16 18 20 22 */
@@ -160,7 +382,7 @@ p.Memo {
 "굴림", "굴림", "굴림", "굴림", "MS Gothic", "굴림", "굴림";
   font-size: 10pt;
 }
-.charshape-1 {
+span.charshape-1 {
   color: #000000;
   font-family: /* base: 1 6 12 16 18 20 22 */
 /* base + offset: 2 7 13 17 19 21 23 */
@@ -168,7 +390,7 @@ p.Memo {
 "바탕", "바탕", "바탕", "바탕", "MS Mincho", "바탕", "바탕";
   font-size: 10pt;
 }
-.charshape-2 {
+span.charshape-2 {
   color: #000000;
   font-family: /* base: 1 6 12 16 18 20 22 */
 /* base + offset: 1 6 12 16 18 20 22 */
@@ -176,7 +398,7 @@ p.Memo {
 "굴림", "굴림", "굴림", "굴림", "MS Gothic", "굴림", "굴림";
   font-size: 9pt;
 }
-.charshape-3 {
+span.charshape-3 {
   color: #000000;
   font-family: /* base: 1 6 12 16 18 20 22 */
 /* base + offset: 1 6 12 16 18 20 22 */
@@ -184,7 +406,7 @@ p.Memo {
 "굴림", "굴림", "굴림", "굴림", "MS Gothic", "굴림", "굴림";
   font-size: 9pt;
 }
-.charshape-4 {
+span.charshape-4 {
   color: #000000;
   font-family: /* base: 1 6 12 16 18 20 22 */
 /* base + offset: 2 7 13 17 19 21 23 */
@@ -192,7 +414,7 @@ p.Memo {
 "바탕", "바탕", "바탕", "바탕", "MS Mincho", "바탕", "바탕";
   font-size: 9pt;
 }
-.charshape-5 {
+span.charshape-5 {
   color: #000000;
   font-family: /* base: 1 6 12 16 18 20 22 */
 /* base + offset: 3 7 13 17 19 21 23 */
@@ -200,7 +422,7 @@ p.Memo {
 "한컴바탕", "바탕", "바탕", "바탕", "MS Mincho", "바탕", "바탕";
   font-size: 10pt;
 }
-.charshape-6 {
+span.charshape-6 {
   color: #000000;
   font-family: /* base: 1 6 12 16 18 20 22 */
 /* base + offset: 5 7 13 17 19 21 23 */
@@ -208,7 +430,7 @@ p.Memo {
 "한양신명조", "바탕", "바탕", "바탕", "MS Mincho", "바탕", "바탕";
   font-size: 10pt;
 }
-.charshape-7 {
+span.charshape-7 {
   color: #000000;
   font-family: /* base: 1 6 12 16 18 20 22 */
 /* base + offset: 4 7 13 17 19 21 23 */
@@ -216,7 +438,7 @@ p.Memo {
 "휴먼명조", "바탕", "바탕", "바탕", "MS Mincho", "바탕", "바탕";
   font-size: 10pt;
 }
-.charshape-8 {
+span.charshape-8 {
   color: #000000;
   font-family: /* base: 1 6 12 16 18 20 22 */
 /* base + offset: 2 8 13 17 19 21 23 */
@@ -224,7 +446,7 @@ p.Memo {
 "바탕", "Arial", "바탕", "바탕", "MS Mincho", "바탕", "바탕";
   font-size: 10pt;
 }
-.charshape-9 {
+span.charshape-9 {
   color: #000000;
   font-family: /* base: 1 6 12 16 18 20 22 */
 /* base + offset: 2 9 13 17 19 21 23 */
@@ -232,7 +454,7 @@ p.Memo {
 "바탕", "Comic Sans MS", "바탕", "바탕", "MS Mincho", "바탕", "바탕";
   font-size: 10pt;
 }
-.charshape-10 {
+span.charshape-10 {
   color: #000000;
   font-family: /* base: 1 6 12 16 18 20 22 */
 /* base + offset: 2 10 13 17 19 21 23 */
@@ -240,7 +462,7 @@ p.Memo {
 "바탕", "Courier New", "바탕", "바탕", "MS Mincho", "바탕", "바탕";
   font-size: 10pt;
 }
-.charshape-11 {
+span.charshape-11 {
   color: #000000;
   font-family: /* base: 1 6 12 16 18 20 22 */
 /* base + offset: 2 11 13 17 19 21 23 */
@@ -248,7 +470,7 @@ p.Memo {
 "바탕", "DejaVu Serif", "바탕", "바탕", "MS Mincho", "바탕", "바탕";
   font-size: 10pt;
 }
-.charshape-12 {
+span.charshape-12 {
   color: #000000;
   font-family: /* base: 1 6 12 16 18 20 22 */
 /* base + offset: 2 7 14 17 19 21 23 */
@@ -256,7 +478,7 @@ p.Memo {
 "바탕", "바탕", "SimHei", "바탕", "MS Mincho", "바탕", "바탕";
   font-size: 10pt;
 }
-.charshape-13 {
+span.charshape-13 {
   color: #000000;
   font-family: /* base: 1 6 12 16 18 20 22 */
 /* base + offset: 2 7 15 17 19 21 23 */
@@ -264,7 +486,7 @@ p.Memo {
 "바탕", "바탕", "SimSun", "바탕", "MS Mincho", "바탕", "바탕";
   font-size: 10pt;
 }
-.charshape-14 {
+span.charshape-14 {
   color: #000000;
   font-family: /* base: 1 6 12 16 18 20 22 */
 /* base + offset: 2 7 13 18 19 21 23 */
@@ -272,7 +494,7 @@ p.Memo {
 "바탕", "바탕", "바탕", "MS Gothic", "MS Mincho", "바탕", "바탕";
   font-size: 10pt;
 }
-.charshape-15 {
+span.charshape-15 {
   color: #000000;
   font-family: /* base: 1 6 12 16 18 20 22 */
 /* base + offset: 2 7 13 19 19 21 23 */
