--- a/pyhwp-tests/hwp5_tests/fixtures/tabdef.html.d/styles.css
+++ b/pyhwp-tests/hwp5_tests/fixtures/tabdef.html.d/styles.css
@@ -15,209 +15,449 @@ body {
   margin-bottom: 0;
 }
 /* Styles */
-p.Normal {
+.Normal {
+/* @parashape-id = 2*/
+  margin: 0pt 0pt 0pt 0pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
 }
-p.Body {
+.Normal > span {
+  line-height: 1.6;
 }
-p.Outline-1 {
+.Normal > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 3 5 7 9 11 13 */
+/* base + offset: 2 4 6 8 10 12 14 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+  font-size: 10pt;
 }
-p.Outline-2 {
+.Body {
+/* @parashape-id = 3*/
+  margin: 0pt 0pt 0pt 15pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
 }
-p.Outline-3 {
+.Body > span {
+  line-height: 1.6;
 }
-p.Outline-4 {
+.Body > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 3 5 7 9 11 13 */
+/* base + offset: 2 4 6 8 10 12 14 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+  font-size: 10pt;
 }
-p.Outline-5 {
+.Outline-1 {
+/* @parashape-id = 4*/
+  margin: 0pt 0pt 0pt 10pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
 }
-p.Outline-6 {
+.Outline-1 > span {
+  line-height: 1.6;
 }
-p.Outline-7 {
+.Outline-1 > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 3 5 7 9 11 13 */
+/* base + offset: 2 4 6 8 10 12 14 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+  font-size: 10pt;
 }
-p.Page-Number {
+.Outline-2 {
+/* @parashape-id = 5*/
+  margin: 0pt 0pt 0pt 20pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
 }
-p.Header {
+.Outline-2 > span {
+  line-height: 1.6;
 }
-p.Footnote {
+.Outline-2 > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 3 5 7 9 11 13 */
+/* base + offset: 2 4 6 8 10 12 14 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+  font-size: 10pt;
 }
-p.Endnote {
+.Outline-3 {
+/* @parashape-id = 6*/
+  margin: 0pt 0pt 0pt 30pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
 }
-p.Memo {
+.Outline-3 > span {
+  line-height: 1.6;
 }
-/* Paragraph attributes */
-.parashape-0 {
+.Outline-3 > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 3 5 7 9 11 13 */
+/* base + offset: 2 4 6 8 10 12 14 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+  font-size: 10pt;
+}
+.Outline-4 {
+/* @parashape-id = 7*/
+  margin: 0pt 0pt 0pt 40pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.Outline-4 > span {
+  line-height: 1.6;
+}
+.Outline-4 > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 3 5 7 9 11 13 */
+/* base + offset: 2 4 6 8 10 12 14 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+  font-size: 10pt;
+}
+.Outline-5 {
+/* @parashape-id = 8*/
+  margin: 0pt 0pt 0pt 50pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.Outline-5 > span {
+  line-height: 1.6;
+}
+.Outline-5 > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 3 5 7 9 11 13 */
+/* base + offset: 2 4 6 8 10 12 14 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+  font-size: 10pt;
+}
+.Outline-6 {
+/* @parashape-id = 9*/
+  margin: 0pt 0pt 0pt 60pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.Outline-6 > span {
+  line-height: 1.6;
+}
+.Outline-6 > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 3 5 7 9 11 13 */
+/* base + offset: 2 4 6 8 10 12 14 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+  font-size: 10pt;
+}
+.Outline-7 {
+/* @parashape-id = 10*/
+  margin: 0pt 0pt 0pt 70pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.Outline-7 > span {
+  line-height: 1.6;
+}
+.Outline-7 > span {
+/* @charshape-id = 1*/
+  color: #000000;
+  font-family: /* base: 1 3 5 7 9 11 13 */
+/* base + offset: 2 4 6 8 10 12 14 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+  font-size: 10pt;
+}
+.Page-Number {
+/* @parashape-id = 2*/
+  margin: 0pt 0pt 0pt 0pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+.Page-Number > span {
+  line-height: 1.6;
+}
+.Page-Number > span {
+/* @charshape-id = 0*/
+  color: #000000;
+  font-family: /* base: 1 3 5 7 9 11 13 */
+/* base + offset: 1 3 5 7 9 11 13 */
+/* ko en cn jp other symbol user */
+"굴림", "굴림", "굴림", "굴림", "굴림", "굴림", "굴림";
+  font-size: 10pt;
+}
+.Header {
+/* @parashape-id = 11*/
+  margin: 0pt 0pt 0pt 0pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.5em;
+}
+.Header > span {
+  line-height: 1.5;
+}
+.Header > span {
+/* @charshape-id = 2*/
+  color: #000000;
+  font-family: /* base: 1 3 5 7 9 11 13 */
+/* base + offset: 1 3 5 7 9 11 13 */
+/* ko en cn jp other symbol user */
+"굴림", "굴림", "굴림", "굴림", "굴림", "굴림", "굴림";
+  font-size: 9pt;
+}
+.Footnote {
+/* @parashape-id = 0*/
   margin: 0pt 0pt 0pt 0pt;
   text-align: justify;
   text-indent: -13.1pt;
   padding-left: 13.1pt;
   min-height: 1.3em;
 }
-.parashape-0 > span {
+.Footnote > span {
   line-height: 1.3;
 }
-.parashape-1 {
+.Footnote > span {
+/* @charshape-id = 3*/
+  color: #000000;
+  font-family: /* base: 1 3 5 7 9 11 13 */
+/* base + offset: 2 4 6 8 10 12 14 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+  font-size: 9pt;
+}
+.Endnote {
+/* @parashape-id = 0*/
+  margin: 0pt 0pt 0pt 0pt;
+  text-align: justify;
+  text-indent: -13.1pt;
+  padding-left: 13.1pt;
+  min-height: 1.3em;
+}
+.Endnote > span {
+  line-height: 1.3;
+}
+.Endnote > span {
+/* @charshape-id = 3*/
+  color: #000000;
+  font-family: /* base: 1 3 5 7 9 11 13 */
+/* base + offset: 2 4 6 8 10 12 14 */
+/* ko en cn jp other symbol user */
+"바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
+  font-size: 9pt;
+}
+.Memo {
+/* @parashape-id = 1*/
   margin: 0pt 0pt 0pt 0pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-1 > span {
+.Memo > span {
   line-height: 1.6;
 }
-.parashape-2 {
+.Memo > span {
+/* @charshape-id = 4*/
+  color: #000000;
+  font-family: /* base: 1 3 5 7 9 11 13 */
+/* base + offset: 1 3 5 7 9 11 13 */
+/* ko en cn jp other symbol user */
+"굴림", "굴림", "굴림", "굴림", "굴림", "굴림", "굴림";
+  font-size: 9pt;
+}
+/* Paragraph attributes */
+p.parashape-0 {
+  margin: 0pt 0pt 0pt 0pt;
+  text-align: justify;
+  text-indent: -13.1pt;
+  padding-left: 13.1pt;
+  min-height: 1.3em;
+}
+p.parashape-0 > span {
+  line-height: 1.3;
+}
+p.parashape-1 {
   margin: 0pt 0pt 0pt 0pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-2 > span {
+p.parashape-1 > span {
   line-height: 1.6;
 }
-.parashape-3 {
+p.parashape-2 {
+  margin: 0pt 0pt 0pt 0pt;
+  text-align: justify;
+  text-indent: 0pt;
+  min-height: 1.6em;
+}
+p.parashape-2 > span {
+  line-height: 1.6;
+}
+p.parashape-3 {
   margin: 0pt 0pt 0pt 15pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-3 > span {
+p.parashape-3 > span {
   line-height: 1.6;
 }
-.parashape-4 {
+p.parashape-4 {
   margin: 0pt 0pt 0pt 10pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-4 > span {
+p.parashape-4 > span {
   line-height: 1.6;
 }
-.parashape-5 {
+p.parashape-5 {
   margin: 0pt 0pt 0pt 20pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-5 > span {
+p.parashape-5 > span {
   line-height: 1.6;
 }
-.parashape-6 {
+p.parashape-6 {
   margin: 0pt 0pt 0pt 30pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-6 > span {
+p.parashape-6 > span {
   line-height: 1.6;
 }
-.parashape-7 {
+p.parashape-7 {
   margin: 0pt 0pt 0pt 40pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-7 > span {
+p.parashape-7 > span {
   line-height: 1.6;
 }
-.parashape-8 {
+p.parashape-8 {
   margin: 0pt 0pt 0pt 50pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-8 > span {
+p.parashape-8 > span {
   line-height: 1.6;
 }
-.parashape-9 {
+p.parashape-9 {
   margin: 0pt 0pt 0pt 60pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-9 > span {
+p.parashape-9 > span {
   line-height: 1.6;
 }
-.parashape-10 {
+p.parashape-10 {
   margin: 0pt 0pt 0pt 70pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-10 > span {
+p.parashape-10 > span {
   line-height: 1.6;
 }
-.parashape-11 {
+p.parashape-11 {
   margin: 0pt 0pt 0pt 0pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.5em;
 }
-.parashape-11 > span {
+p.parashape-11 > span {
   line-height: 1.5;
 }
-.parashape-12 {
+p.parashape-12 {
   margin: 0pt 0pt 0pt 0pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-12 > span {
+p.parashape-12 > span {
   line-height: 1.6;
 }
-.parashape-13 {
+p.parashape-13 {
   margin: 0pt 0pt 0pt 0pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-13 > span {
+p.parashape-13 > span {
   line-height: 1.6;
 }
-.parashape-14 {
+p.parashape-14 {
   margin: 0pt 0pt 0pt 0pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-14 > span {
+p.parashape-14 > span {
   line-height: 1.6;
 }
-.parashape-15 {
+p.parashape-15 {
   margin: 0pt 0pt 0pt 0pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-15 > span {
+p.parashape-15 > span {
   line-height: 1.6;
 }
-.parashape-16 {
+p.parashape-16 {
   margin: 0pt 0pt 0pt 0pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-16 > span {
+p.parashape-16 > span {
   line-height: 1.6;
 }
-.parashape-17 {
+p.parashape-17 {
   margin: 0pt 0pt 0pt 0pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-17 > span {
+p.parashape-17 > span {
   line-height: 1.6;
 }
-.parashape-18 {
+p.parashape-18 {
   margin: 0pt 0pt 0pt 0pt;
   text-align: justify;
   text-indent: 0pt;
   min-height: 1.6em;
 }
-.parashape-18 > span {
+p.parashape-18 > span {
   line-height: 1.6;
 }
 /* Text attributes */
-.charshape-0 {
+span.charshape-0 {
   color: #000000;
   font-family: /* base: 1 3 5 7 9 11 13 */
 /* base + offset: 1 3 5 7 9 11 13 */
@@ -225,7 +465,7 @@ p.Memo {
 "굴림", "굴림", "굴림", "굴림", "굴림", "굴림", "굴림";
   font-size: 10pt;
 }
-.charshape-1 {
+span.charshape-1 {
   color: #000000;
   font-family: /* base: 1 3 5 7 9 11 13 */
 /* base + offset: 2 4 6 8 10 12 14 */
@@ -233,7 +473,7 @@ p.Memo {
 "바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
   font-size: 10pt;
 }
-.charshape-2 {
+span.charshape-2 {
   color: #000000;
   font-family: /* base: 1 3 5 7 9 11 13 */
 /* base + offset: 1 3 5 7 9 11 13 */
@@ -241,7 +481,7 @@ p.Memo {
 "굴림", "굴림", "굴림", "굴림", "굴림", "굴림", "굴림";
   font-size: 9pt;
 }
-.charshape-3 {
+span.charshape-3 {
   color: #000000;
   font-family: /* base: 1 3 5 7 9 11 13 */
 /* base + offset: 2 4 6 8 10 12 14 */
@@ -249,7 +489,7 @@ p.Memo {
 "바탕", "바탕", "바탕", "바탕", "바탕", "바탕", "바탕";
   font-size: 9pt;
 }
-.charshape-4 {
+span.charshape-4 {
   color: #000000;
   font-family: /* base: 1 3 5 7 9 11 13 */
 /* base + offset: 1 3 5 7 9 11 13 */
